@@ -2416,8 +2416,8 @@ DRIVER(taxi,lu1)        //S11-553:  08/88 W Taxi (Marilyn LU-1 Europe)
 DRIVER(taxi,lg1)        //S11-553:  08/88 W Taxi (Marilyn LG-1 German)
 DRIVER(taxi,l3)         //          08/88 W Taxi (Marilyn)
 DRIVER(taxi,l4)         //          08/88 W Taxi (Lola)
-DRIVER(taxi,l5cm)       //          04/16 W Taxi (Marilyn L-5C)
-DRIVER(taxi,l5c)        //          04/16 W Taxi (Lola L-5C)
+DRIVER(taxi,l5cm)       //          04/16 W Taxi (Marilyn L-5C Competition MOD)
+DRIVER(taxi,l5c)        //          04/16 W Taxi (Lola L-5C Competition MOD)
 DRIVER(jokrz,l3)        //S11-567:  12/88 W Jokerz! (L-3)
 DRIVER(jokrz,g4)        //          12/88 W Jokerz! (G-4 German)
 DRIVER(jokrz,l6)        //          12/88 W Jokerz! (L-6)
@@ -2427,7 +2427,7 @@ DRIVER(esha,la1)        //          02/89 W Earthshaker LA-1
 DRIVER(esha,lg1)        //          02/89 W Earthshaker LG-1 (German)
 DRIVER(esha,lg2)        //          02/89 W Earthshaker LG-2 (German)
 DRIVER(esha,la3)        //          02/89 W Earthshaker LA-3
-DRIVER(esha,l4c)        //          06/16 W Earthshaker LA-4C
+DRIVER(esha,l4c)        //          06/16 W Earthshaker LA-4C Competition MOD
 DRIVER(esha,ma3)        //                  Earthshaker LA-3 (Metallica)
 DRIVER(esha,pr4)        //          02/89 W Earthshaker Family version
 DRIVER(bk2k,pu1)        //S11-563:  04/89 W Black Knight 2000 (PU-1 Prototype Europe)
@@ -2485,7 +2485,7 @@ DRIVER(pool,le2)        //          03/90?B Pool Sharks (LE-2 Europe)
 DRIVER(pool,l5)         //          05/90 B Pool Sharks (LA-5)
 DRIVER(pool,l6)         //          05/90 B Pool Sharks (LA-6)
 DRIVER(pool,l7)         //          01/91 B Pool Sharks (LA-7)
-DRIVER(pool,l7c)        //          04/18 B Pool Sharks (LA-7C Competition MOD)
+DRIVER(pool,l7c)        //          10/19 B Pool Sharks (LA-7C Competition MOD)
 DRIVER(diner,p0)        //S11-571:  11/89 W Diner (PA-0 Prototype)
 DRIVER(diner,l1)        //          06/90 W Diner (LU-1 Europe)
 DRIVER(diner,l2)        //          06/90 W Diner (LU-2 Europe)
@@ -2500,7 +2500,7 @@ DRIVER(strax,p7)        //S11-???:  09/90 W Star Trax (Domestic Prototype)
 DRIVER(dd,p6)           //S11-2016: 08/90 B Dr. Dude (PA-6 Prototype)
 DRIVER(dd,lu1)          //          08/90 B Dr. Dude (LU-1 Europe)
 DRIVER(dd,l2)           //          09/90 B Dr. Dude (LA-2)
-DRIVER(dd,l3c)          //          04/16 B Dr. Dude (LA-3C)
+DRIVER(dd,l3c)          //          04/16 B Dr. Dude (LA-3C Competition MOD)
 DRIVER(bbnny,l2)        //S11-209:  12/90 B Bugs Bunny's Birthday Ball (L-2)
 DRIVER(bbnny,lu)        //          12/90 B Bugs Bunny's Birthday Ball (LU-2 Europe)
 //WPC
