@@ -43,6 +43,7 @@ Lord of the Rings, The 3.00
 Moon Light (Free Play)
 Mundial 90 (Free Play)
 Oba-Oba (old hardware)
+Pool Sharks LA-7C (competition MOD) (updated)
 Space Train (old hardware)
 Theatre of Magic 1.3XC (competition MOD) (updated)
 Twilight Zone LA-9 (aka PAPA Tournament Version 9.0)
